# warcrime-investigator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: .env.example
investigation_agent/: __init__.py  cli.py  config.py
investigation_agent/agent/: __init__.py  prompts.py  react.py  tools.py
investigation_agent/db/: __init__.py  insert_types.py  schema.py  session.py  store.py
investigation_agent/llm/: __init__.py  json_util.py  ollama_client.py  prompts.py
investigation_agent/processor/: __init__.py  attack_filter.py  classifier.py  extractor.py  matcher.py  review_queue.py
investigation_agent/retrieval/: __init__.py  chroma_store.py
investigation_agent/scraper/: __init__.py  telegram.py  web.py
investigation_agent/util/: urlnorm.py
investigation_agent/workflows/: __init__.py  ingest.py
scripts/: smoke_eval.sh
tests/: conftest.py  test_attack_filter.py  test_attack_relation.py  test_candidates.py  test_classifier_war_crimes.py  test_extractor_normalize.py  test_incidents.py  test_merge_classification.py  test_parse_id_list.py  test_query_local_hits.py  test_store_dedup.py  test_summarize_cluster.py  test_urlnorm.py  test_web_ddgs.py
tests/fixtures/: README.md  relation_associated_ambulance_en.txt  relation_context_only_en.txt  relation_direct_hit_en.txt  relation_inside_compound_en.txt  relation_nearby_en.txt  sample_evidence_ar.txt  sample_evidence_en.txt
