[project]
name = "investigation-agent"
version = "0.1.0"
description = "Target-driven evidence collection from Telegram channels and keyword web search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "sqlalchemy>=2.0.0",
  "python-dotenv>=1.0.0",
  "telethon>=1.40.0",
  "httpx>=0.27.0",
  "ddgs>=9.0.0",
  "trafilatura>=1.8.0",
  "chromadb>=0.5.0",
]

[project.scripts]
investigate = "investigation_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["investigation_agent"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
